--- a/components/ui/navigation/Logo.module.css
+++ b/components/ui/navigation/Logo.module.css
@@ -16,8 +16,8 @@
 }
 
 .lg .icon {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 .icon {
@@ -63,7 +63,7 @@
 
 .inner {
   position: absolute;
-  inset: 0.5;
+  inset: 2px;
   background: rgba(30, 37, 46, 1.0);
   border-radius: 0.375rem;
   display: flex;
